REMS-Salesforce/force-app/main/default/objects/Compliance_Report__c/Compliance_Report__c.object-meta.xml
<CustomObject>
    <label>Compliance Report</label>
    <nameField>
        <label>Compliance Report Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Compliance reports</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>