REMS-Salesforce/force-app/main/default/objects/Compliance_Report__c/fields/Non_Compliant_Records__c.field-meta.xml
<CustomField>
    <fullName>Non_Compliant_Records__c</fullName>
    <label>Non Compliant Records</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>