REMS-Salesforce/force-app/main/default/objects/Compliance_Report__c/fields/Program__c.field-meta.xml
<CustomField>
    <fullName>Program__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Program</label>
    <referenceTo>Program__c</referenceTo>
    <relationshipLabel>Compliance reports</relationshipLabel>
    <relationshipName>Compliance_reports</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>