REMS-Salesforce/force-app/main/default/objects/Compliance_Report__c/fields/Report_Status__c.field-meta.xml
<CustomField>
    <fullName>Report_Status__c</fullName>
    <label>Report Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
            </value>
            <value>
                <fullName>In Review</fullName>
            </value>
            <value>
                <fullName>Submitted</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>