REMS-Salesforce/force-app/main/default/objects/Compliance_Report__c/fields/Reporting_Period_End__c.field-meta.xml
<CustomField>
    <fullName>Reporting_Period_End__c</fullName>
    <label>Reporting Period End</label>
    <required>true</required>
    <type>Date</type>
</CustomField>