REMS-Salesforce/force-app/main/default/objects/Compliance_Report__c/fields/Total_Patients_Enrolled__c.field-meta.xml
<CustomField>
    <fullName>Total_Patients_Enrolled__c</fullName>
    <label>Total Patients Enrolled</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>